Updating after debug session, updates to css, playbooks, and Makefile.
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/community-supplemental-files/css/site-extra.css
+++ b/community-supplemental-files/css/site-extra.css
@@ -240,7 +240,7 @@ a:hover {
 }
 
 .doc a, .doc a:visited {
-  color: #26915e;
+  color: #3D98D3;
   
 }
 
@@ -251,21 +251,21 @@ background-color: #0a322c;
 
 /* Plain links in paragraphs and body */
 .doc a.bare {
-  color:  #26915e;
+  color:  #3D98D3;
   font-weight: 500;
 }
 
 .doc a.bare :hover {
-  color: #26915e;
+  color: #3D98D3;
 }
 
 /* TOC links and heading links */
 .doc a, .doc a:visited {
-  color: #26915e;
+  color: #3D98D3;
 }
 
 .doc a:hover {
-  color: #26915e;
+  color: #3D98D3;
 }
 
 .doc .listingblock pre:not(.highlight), .doc .literalblock pre, .doc pre.highlight code {
@@ -296,12 +296,6 @@ background-color: #0a322c;
   z-index: 12;
 }
 
-/* Heading colors in article */
-h1.page {
-  color: #0C322C;
-  background-color: #90ebcd5c;
-}
-
 .doc h2 {
   color: #0C322C;
 }
@@ -328,10 +322,10 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
  */
-
+ 
 /* color for pre literal boxes code should use [source, language]*/
 pre {
-  color: #90EBCC;
+  color: #3D98D3;
   border-radius: 12px;
 }
 
@@ -443,7 +437,7 @@ img.langIcon.korea {
 .breadcrumbs li::after {
   content: "/";
   padding: 0 .5rem;
-  color: #30BA78;
+  color: #3D98D3;
 }
 
 nav.pagination a {
@@ -773,7 +767,7 @@ ul.sectlevel1 {
 }
 
 ::marker {
-  color: #26915e;
+  color: #3D98D3;
   font-size: large;
   font-weight: 500;
 }
