Updating community-supplemental-files with a scroll-sync with the right hand side TOC headers relative to where user is located in the body content.
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/community-supplemental-files/css/site-extra.css
+++ b/community-supplemental-files/css/site-extra.css
@@ -403,6 +403,12 @@ img.langIcon.korea {
   border-bottom: 1px solid #c0c2c4;
 }
 
+.sidebar .toc-menu a.is-active {
+  color: #326ce5;
+  border-left-color: #326ce5;
+  font-weight: 600;
+}
+
 .sidebar .toc-menu li:hover {
   color: #ffffff;
   background-color: #326ce5;
