--- a/community-supplemental-files/partials/footer-scripts.hbs
+++ b/community-supplemental-files/partials/footer-scripts.hbs
@@ -5,5 +5,4 @@
 {{/if}}
 <script src="{{uiRootPath}}/js/vendor/langSelection.js"></script>
 <script async src="{{{uiRootPath}}}/js/vendor/tabs.js"></script>
-
-
+<script src="{{{uiRootPath}}}/js/vendor/toc-active.js"></script>
