Updating CSS with bottom right versioning section with DSC style.
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/community-supplemental-files/css/site-extra.css
+++ b/community-supplemental-files/css/site-extra.css
@@ -72,7 +72,7 @@ i.fa[title='Tip:'] {
 }
 
 .nav-container {
-  width: calc(270 / 18 * 1rem);
+  width: calc(270 / 16 * 1rem);
 }
 
 @media screen and (min-width: 1024px) {
@@ -214,6 +214,28 @@ a.navbar-logo {
 
 .nav-panel-explore .context .title {
   flex: auto;
+}
+
+.nav-panel-explore .components .component .title {
+  font-weight: 500;
+  background: #efefef;
+  padding-left: .1em;
+}
+
+.nav-panel-explore .components .component .title a {
+  color: #326ce5;
+  font-weight: 800;
+}
+
+.nav-panel-explore .components .component .title a:hover {
+  color: #326ce5;
+  text-decoration: underline;
+  font-weight: 800;
+}
+
+.nav-panel-explore .component+.component {
+  margin-top: .5rem;
+  border-top-style: ridge;
 }
 
 /* Left Nav Link styles  */
