Add background-transparent role

--- a/community-supplemental-files/css/site-extra.css
+++ b/community-supplemental-files/css/site-extra.css
@@ -555,6 +555,10 @@ tr:nth-child(even) {
   background: #9a9a9a26;
 }
 
+table.background-transparent tr:nth-child(even) {
+  background: transparent;
+}
+
 .doc .admonitionblock>table {
   border-collapse: unset;
 }
