Hiding bottom left nav explore panel containing versions
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/community-supplemental-files/css/site-extra.css
+++ b/community-supplemental-files/css/site-extra.css
@@ -204,6 +204,10 @@ a.navbar-logo {
   background-color: #EFEFEF;
 }
 
+.nav-panel-explore {
+  display: none !important;
+}
+
 .nav-panel-explore .components .component .title a:hover {
   color: #efefef;
 }
